<resources>
    <string name="app_name" translatable="false">Mkey</string>
    <string name="welcomeDay">"¡Buenos días "</string>
    <string name="welcomeAfternoon">"¡Buenas tardes "</string>
    <string name="welcomeNight">"¡Buenas noches "</string>
    <string name="welcome2">"¡Bienvenido de vuelta!"</string>
    <string name="nActivityKeyListN">"Keys"</string>
    <string name="nActivityGeneratorN">"Generador"</string>
    <string name="nActivityAccountN">"Cuenta"</string>
    <string name="nActivityGenerator">"Generar key"</string>
    <string name="nActivityGeneratorB">"Generar contraseña"</string>
    <string name="nActivityAccount">"Cuenta Mkey"</string>
    <string name="nActivityAccountB">"Cerrar sesión"</string>
    <string name="nActivityEdit">"Editar key"</string>
    <string name="nActivityEditB">"Guardar"</string>
    <string name="nActivityAdd">"Crear key"</string>
    <string name="nActivityAddB">"Guardar"</string>
    <string name="nMainActivityFprintSignInF">"Fallo al iniciar sesión"</string>
    <string name="nMainActivityFprintTitle">"Tenemos que verificar tu identidad"</string>
    <string name="nMainActivityFprintNB">"Salir de la app"</string>
    <string name="nMainActivityFprintSignInE">"Error al iniciar sesión"</string>
    <string name="nActivityKeyListAE">"Error al guardar en el archivo"</string>
    <string name="nActivityKeySS">"Key guardada"</string>
    <string name="nActivityKeyND">"Tienes que introducir una key"</string>
    <string name="nKeyAdapterNoValidData">"Datos no válidos"</string>
    <string name="nKeyGeneratorTextField">"Introduce una palabra"</string>
    <string name="optionsMenuEdit">"Editar"</string>
    <string name="optionsMenuDelete">"Eliminar"</string>
    <string name="optionsMenuView">"Ver"</string>
    <string name="bPin">"Siguiente"</string>
    <string name="cardLoading">"Cargando"</string>
    <string name="nActivityView">"Ver key"</string>
    <string name="nActivityPinText">"Introduce tú PIN"</string>
    <string name="nActivityKeyListPlatform">"Plataforma"</string>
    <string name="nActivityKeyListUser">"Usuario"</string>
    <string name="nActivityKeyGeneratorInputLayout">"Palabra"</string>
    <string name="nActivityTutorialWelcome">"¡Bienvenido al tutorial! Aquí te explicaremos cómo usar la aplicación."</string>
    <string name="nActivityTutorialPart1">"Este botón crea una nueva Key."</string>
    <string name="nActivityTutorialPart2">"Crea contraseñas nuevas usando palabras."</string>
    <string name="nActivityTutorialPart3">"Tus datos se almacenan de forma segura en la nube."</string>
    <string name="nActivityTutorialWarningPin">"Introduce un PIN que recuerdes a continuación."</string>
    <string name="nActivityTutorialPinInfo">"*El PIN debe de tener entre 6 y 12 digitos."</string>
    <string name="nActivityPinAuthToastE1">"Por favor introduce un pin"</string>
    <string name="nActivityPinAuthToastE2">"El PIN debe de tener entre 6 y 12 digitos."</string>
    <string name="nActivityPinAuthToastE3">"PIN incorrecto"</string>
    <string name="nActivityMainToastE1">"Por favor inicia sesión primero"</string>
    <string name="nActivityTutorialButton">"¡Entendido!"</string>
    <string name="nActivityKeyPlatform">"Plataforma"</string>
    <string name="nActivityKeyUser">"Usuario"</string>
    <string name="nActivityKeyPassword">"Contraseña"</string>
    <string name="nActivityGoogleLogin">"Iniciar sesión con Google"</string>
    <string name="nActivityGoogleLoginInfo">"Esta app funciona con  una cuenta de Google, a continuación puedes iniciar sesión."</string>
    <string name="nActivityGoogleLoginMainInfo">"Inicia sesión en una cuenta de Google."</string>
    <string name="nActivityGeneratorToggleRandom">"Aleatorio"</string>
    <string name="nActivityGeneratorToggleWord">"Palabra"</string>
    <string name="nActivityKeyListNotificationTitle">"Keys actualizadas"</string>
    <string name="nActivityKeyListNotificationText">"Tus keys han sido actualizadas en Drive"</string>
    <string name="nActivityMainBlock">"La aplicación está bloqueada por demasiados intentos fallidos. Espera 30 segundos para intentar de nuevo."</string>
</resources>