<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    android:padding="16dp">

    <FrameLayout
        android:id="@+id/frameLayout2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/rounded_layout"
        android:elevation="8dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline6"
        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toTopOf="@+id/guideline8"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints">

        <androidx.gridlayout.widget.GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:elevation="8dp"
            android:layout_margin="15dp"
            app:alignmentMode="alignMargins"
            tools:ignore="MissingConstraints">

            <TextView
                android:id="@+id/tutorialText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="16dp"
                android:elevation="8dp"
                android:fontFamily="@font/nunito_sans_bold"
                android:text="@string/nActivityTutorialWelcome"
                android:textColor="@color/textColorPrimary"
                android:textSize="20sp"
                android:visibility="invisible"
                app:layout_column="0"
                app:layout_row="0" />

            <TextView
                android:id="@+id/tutorialText2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="16dp"
                android:elevation="8dp"
                android:fontFamily="@font/nunito_sans_bold"
                android:text="@string/nActivityTutorialPart1"
                android:textColor="@color/textColorPrimary"
                android:textSize="20sp"
                android:visibility="invisible"
                app:layout_column="0"
                app:layout_row="1" />

            <TextView
                android:id="@+id/tutorialText3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                android:elevation="8dp"
                android:fontFamily="@font/nunito_sans_bold"
                android:text="@string/nActivityTutorialPart2"
                android:textColor="@color/textColorPrimary"
                android:textSize="20sp"
                android:visibility="invisible"
                app:layout_column="0"
                app:layout_row="3" />

            <TextView
                android:id="@+id/tutorialText4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="16dp"
                android:elevation="8dp"
                android:fontFamily="@font/nunito_sans_bold"
                android:text="@string/nActivityTutorialPart3"
                android:textColor="@color/textColorPrimary"
                android:textSize="20sp"
                android:visibility="invisible"
                app:layout_column="0"
                app:layout_row="4" />

            <TextView
                android:id="@+id/tutorialText5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="16dp"
                android:elevation="8dp"
                android:fontFamily="@font/nunito_sans_bold"
                android:text="@string/nActivityGoogleLoginInfo"
                android:textColor="@color/textColorPrimary"
                android:textSize="20sp"
                android:visibility="invisible"
                app:layout_column="0"
                app:layout_row="5" />

            <ImageView
                android:id="@+id/imageViewAdd"
                android:layout_width="61dp"
                android:layout_height="61dp"
                app:layout_column="0"
                app:layout_row="2"
                android:visibility="invisible"
                app:srcCompat="@drawable/plus"
                app:tint="@color/blueActionBar" />

        </androidx.gridlayout.widget.GridLayout>
    </FrameLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp"
        app:layout_constraintGuide_percent="0.0" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp"
        app:layout_constraintGuide_percent="0.02" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp"
        app:layout_constraintGuide_percent="0.98" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp"
        app:layout_constraintGuide_percent="0.8 " />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="191dp"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp"
        app:layout_constraintGuide_percent="0.98" />

    <!-- Agrega más instrucciones del tutorial aquí -->

    <Button
        android:id="@+id/continueButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tutorialText"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="36dp"
        android:text="@string/nActivityTutorialButton"
        android:textSize="24sp"
        android:backgroundTint="@color/blueButton"
        android:textColor="@color/textColorSecondary"
        app:layout_constraintBottom_toTopOf="@+id/guideline9"
        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintHorizontal_bias="0.411"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toTopOf="@+id/guideline8"
        app:layout_constraintVertical_bias="0.95" />

</androidx.constraintlayout.widget.ConstraintLayout>
